feat: enhance opensearch feature tests and add new scenarios